--- a/ExcelConverter/excel-converter/pom.xml
+++ b/ExcelConverter/excel-converter/pom.xml
@@ -24,6 +24,11 @@
     	<artifactId>commons-cli</artifactId>
     	<version>1.4</version>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.poi</groupId>
+    	<artifactId>poi-ooxml</artifactId>
+    	<version>3.17</version>
+    </dependency>
   </dependencies>
   <build>
     <pluginManagement>
