Properly building internal database (I hope).
(Previously, we were just sort of passing over the incoming spreadsheet
row cells without really storing them properly.)

--- a/ExcelConverter/logging.properties
+++ b/ExcelConverter/logging.properties
@@ -6,7 +6,8 @@
 handlers= java.util.logging.ConsoleHandler
 #---------------------------------------------
 # Default global logging level. (FINE = DEBUG.)
-.level= FINE
+.level= WARNING
+church.universityumc.level = FINE
 
 #---------------------------------------------
 # Handler specific properties.
