--- a/ExcelConverter/.gitignore
+++ b/ExcelConverter/.gitignore
@@ -1,7 +1,6 @@
-2016 Lay Leadership*.xls*
+# 2016 Lay Leadership*.xls*
 llc-sample.xls*
-/2016 Lay Leadership + John and ZZdummys.XLS
+# /2016 Lay Leadership + John and ZZdummys.XLS
 .~lock.*#
-/#README.org#
-/.#README.org
-/foo.xlsx
+/#*#
+/.#*
