--- a/ExcelConverter/pom.xml
+++ b/ExcelConverter/pom.xml
@@ -60,8 +60,8 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <source>9</source>
+            <target>9</target>
           </configuration>
         </plugin>
         <plugin>
@@ -77,7 +77,32 @@
             </archive>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.1.0</version>
+          <configuration>
+            <descriptors>
+              <descriptor>src/main/assembly/executable-jar-with-dependencies.xml</descriptor>
+            </descriptors>
+            <archive>
+              <manifest>
+                <mainClass>church.universityumc.excelconverter.App</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
+          <executions>
+            <execution>
+              <id>make-assembly</id>
+              <phase>package</phase>
+              <goals>
+                <goal>single</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
+  <description>Converts input spreadsheet from AcessACS into a more usable format for filtering for members with certain characteristics.</description>
 </project>
