Got Maven to build a complete, viable binary zip

--- a/ExcelConverter/logging.properties
+++ b/ExcelConverter/logging.properties
@@ -7,6 +7,8 @@ handlers= java.util.logging.ConsoleHandler
 #---------------------------------------------
 # Default global logging level. (FINE = DEBUG.)
 .level= WARNING
+
+# ...but for our stuff, we want a little more info.
 church.universityumc.level = FINE
 
 #---------------------------------------------
