--- a/ExcelConverter/pom.xml
+++ b/ExcelConverter/pom.xml
@@ -82,8 +82,12 @@
           <artifactId>maven-assembly-plugin</artifactId>
           <version>3.1.0</version>
           <configuration>
+            <descriptorRefs>
+              <!-- <descriptorRef>bin</descriptorRef> -->
+            </descriptorRefs>
             <descriptors>
-              <descriptor>src/main/assembly/executable-jar-with-dependencies.xml</descriptor>
+              <!-- <descriptor>src/main/assembly/executable-jar-with-dependencies.xml</descriptor> -->
+              <descriptor>src/main/assembly/bin.xml</descriptor>
             </descriptors>
             <archive>
               <manifest>
