--- a/ExcelConverter/pom.xml
+++ b/ExcelConverter/pom.xml
@@ -4,7 +4,7 @@
   <groupId>church.universityumc.excelconverter</groupId>
   <artifactId>excel-converter</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT-2</version>
   <name>excel-converter</name>
   <url>http://maven.apache.org</url>
 
