--- a/ExcelConverter/pom.xml
+++ b/ExcelConverter/pom.xml
@@ -59,15 +59,16 @@
     	<version>3.17</version>
     </dependency>
     <dependency>
-    	<groupId>commons-cli</groupId>
-    	<artifactId>commons-cli</artifactId>
-    	<version>1.4</version>
-    </dependency>
-    <dependency>
     	<groupId>org.apache.poi</groupId>
     	<artifactId>poi-ooxml</artifactId>
     	<version>3.17</version>
     </dependency>
+    <dependency>
+    	<groupId>commons-cli</groupId>
+    	<artifactId>commons-cli</artifactId>
+    	<version>1.4</version>
+    </dependency>
+
     <!-- JAXB dependencies called out here:  https://stackoverflow.com/q/48204141/370611
          and here:  http://openjdk.java.net/jeps/320#Java-EE-modules
     -->
@@ -91,7 +92,9 @@
       <artifactId>javax.activation-api</artifactId>
       <version>1.2.0</version>
     </dependency>
+
   </dependencies>
+
   <build>
     <pluginManagement>
 
@@ -138,6 +141,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
+          <version>3.0.2</version>
           <configuration>
             <archive>
               <manifest>
@@ -163,16 +167,10 @@
               <descriptor>src/main/assembly/bin.xml</descriptor>
               <descriptor>src/main/assembly/src.xml</descriptor>
             </descriptors>
-            <archive>
-              <manifest>
-                <mainClass>church.universityumc.excelconverter.App</mainClass>
-              </manifest>
-            </archive>
           </configuration>
           <executions>
-            <!-- (1) Doesn't work (still needs explicit invocation); and (2) Not sure a single executable jar is the
-                 right approach anyway, because we still need external files like logging.properties and maybe some
-                 .BAT/shell scripts.
+            <!-- (1) Doesn't work (still needs explicit invocation)
+            -->
             <execution>
               <id>make-assembly</id>
               <phase>package</phase>
@@ -180,10 +178,11 @@
                 <goal>single</goal>
               </goals>
             </execution>
-            -->
           </executions>
         </plugin>
         
+        
+
       </plugins>
     </pluginManagement>
   </build>
