Switch ListView to Files, not Strings. Read logging config in main().

--- a/ExcelConverter/src/main/resources/logging.properties
+++ b/ExcelConverter/src/main/resources/logging.properties
@@ -3,7 +3,8 @@
 #---------------------------------------------
 #  Global properties
 #---------------------------------------------
-handlers= java.util.logging.ConsoleHandler
+handlers= java.util.logging.ConsoleHandler java.util.logging.FileHandler
+
 #---------------------------------------------
 # Default global logging level. (FINE = DEBUG.)
 .level= WARNING
@@ -19,6 +20,11 @@ java.util.logging.ConsoleHandler.level = FINE
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 # java.util.logging.ConsoleHandler.format = [%1$tF %1$tT.%1$tL %3$s %4$-7s] %5$s%n
+
+java.util.logging.FileHandler.pattern = excel-converter-%g-%u.log
+
+# Comment the "formatter" line out to get XML output to log file.
+java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
 
 java.util.logging.SimpleFormatter.format = [%1$tF %1$tT.%1$tL %3$s %4$-7s] %5$s%n
 
