--- a/ExcelConverter/pom.xml
+++ b/ExcelConverter/pom.xml
@@ -4,7 +4,7 @@
   <groupId>church.universityumc</groupId>
   <artifactId>excel-converter</artifactId>
   <packaging>jar</packaging>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
   <name>excel-converter</name>
   <description>
     Converts input spreadsheet from AcessACS into a more usable format for filtering for members with certain
