--- a/ExcelConverter/pom.xml
+++ b/ExcelConverter/pom.xml
@@ -4,7 +4,7 @@
   <groupId>church.universityumc</groupId>
   <artifactId>excel-converter</artifactId>
   <packaging>jar</packaging>
-  <version>1.2.0-SNAPSHOT</version>
+  <version>1.1.1</version>
   <name>excel-converter</name>
   <description>
     Converts input spreadsheet from AcessACS into a more usable format for filtering for members with certain
@@ -169,7 +169,7 @@
             <descriptors>
               <!-- <descriptor>src/main/assembly/executable-jar-with-dependencies.xml</descriptor> -->
               <descriptor>src/main/assembly/bin.xml</descriptor>
-              <descriptor>src/main/assembly/src.xml</descriptor>
+              <!-- <descriptor>src/main/assembly/src.xml</descriptor> -->
             </descriptors>
           </configuration>
           <executions>
