--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ target/
 */*.XLS
 */*.XLSX
 README.html
+/ExcelConverter/Screen Shot 2018-03-19 at 10.12.58 PM.png
+/ExcelConverter/excel-converter-0-0.log.lck
