--- a/LLWebJ/Svc/pom.xml
+++ b/LLWebJ/Svc/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.how_hard_can_it_be</groupId>
-  <artifactId>Bus</artifactId>
+  <artifactId>Svc</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Bus</name>
+  <name>Svc</name>
   <url>http://maven.apache.org</url>
   <parent>
    <groupId>com.how_hard_can_it_be</groupId>
@@ -18,6 +18,11 @@
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
+   <dependency>
+      <groupId>com.how_hard_can_it_be</groupId>
+      <artifactId>Bus</artifactId>
+      <version>1.0-SNAPSHOT</version>
+   </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
