--- a/LLWebJ/Web/src/main/webapp/WEB-INF/web.xml
+++ b/LLWebJ/Web/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,10 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <resource-env-ref>
+    <resource-env-ref-name>BeanManager</resource-env-ref-name>
+    <resource-env-ref-type>
+      javax.enterprise.inject.spi.BeanManager
+    </resource-env-ref-type>
+  </resource-env-ref>
 </web-app>
