--- a/LLWebJ/Web/pom.xml
+++ b/LLWebJ/Web/pom.xml
@@ -57,7 +57,13 @@
             <artifactId>weld-servlet-core</artifactId>
             <version>3.1.4.Final</version>
             <scope>runtime</scope>
-        </dependency>    </dependencies>
+        </dependency>
+        <dependency>
+            <groupId>com.how_hard_can_it_be</groupId>
+            <artifactId>Svc</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
     <build>
         <finalName>Web</finalName>
     </build>
