--- a/LLWebJ/Web/src/main/webapp/WEB-INF/web.xml
+++ b/LLWebJ/Web/src/main/webapp/WEB-INF/web.xml
@@ -3,11 +3,23 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+  <display-name>Lay Leadership Web App</display-name>
   <resource-env-ref>
     <resource-env-ref-name>BeanManager</resource-env-ref-name>
     <resource-env-ref-type>
       javax.enterprise.inject.spi.BeanManager
     </resource-env-ref-type>
   </resource-env-ref>
+  <resource-ref>
+    <description>Resource reference to a factory for java.sql.Connection
+      instances that may be used for talking to the Lay Leadership "Contact Tasks"
+      database that is configured in the &lt;Context&gt;
+      configuration for the web application.
+    </description>
+    <res-ref-name>
+      jdbc/LayLeadershipTasks
+    </res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
