--- a/LLWebJ/Web/src/main/webapp/WEB-INF/web.xml
+++ b/LLWebJ/Web/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
       configuration for the web application.
     </description>
     <res-ref-name>
-      jdbc/LayLeadershipTasks
+      jdbc/LayLeadership
     </res-ref-name>
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
