Disambiguated between injectable beans with qualifiers; set up debugging.

--- a/LLWebJ/pom.xml
+++ b/LLWebJ/pom.xml
@@ -21,6 +21,7 @@
     <module>Web</module>
     <module>Data</module>
     <module>Svc</module>
+    <module>Util</module>
   </modules>
   
 </project>
