--- a/LLWebJ/Data/pom.xml
+++ b/LLWebJ/Data/pom.xml
@@ -29,6 +29,12 @@
       <version>1.0-SNAPSHOT</version>
    </dependency>
       <dependency>
+          <groupId>com.how_hard_can_it_be</groupId>
+          <artifactId>Util</artifactId>
+          <version>1.0-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
+      <dependency>
           <groupId>org.xerial</groupId>
           <artifactId>sqlite-jdbc</artifactId>
           <version>3.30.1</version>
