--- a/LLWebJ/Util/pom.xml
+++ b/LLWebJ/Util/pom.xml
@@ -7,6 +7,11 @@
   <version>1.0-SNAPSHOT</version>
   <name>Util</name>
   <url>http://maven.apache.org</url>
+  <parent>
+    <groupId>com.how_hard_can_it_be</groupId>
+    <artifactId>LLWebJ</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
   <properties>
      <maven.compiler.source>11</maven.compiler.source>
      <maven.compiler.target>11</maven.compiler.target>
@@ -18,6 +23,11 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+      <version>1</version>
     </dependency>
   </dependencies>
 </project>
