--- a/LLWebJ/Web/pom.xml
+++ b/LLWebJ/Web/pom.xml
@@ -29,6 +29,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.how_hard_can_it_be</groupId>
+            <artifactId>Data</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
