--- a/LLWebJ/Data/pom.xml
+++ b/LLWebJ/Data/pom.xml
@@ -50,5 +50,17 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>javax.annotation</groupId>
+          <artifactId>javax.annotation-api</artifactId>
+          <version>1.3.2</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>javax.enterprise</groupId>
+          <artifactId>cdi-api</artifactId>
+          <version>2.0.SP1</version>
+          <scope>provided</scope>
+      </dependency>
   </dependencies>
 </project>
