--- a/LLWebJ/Svc/pom.xml
+++ b/LLWebJ/Svc/pom.xml
@@ -23,6 +23,11 @@
       <artifactId>Bus</artifactId>
       <version>1.0-SNAPSHOT</version>
    </dependency>
+<!--      <dependency>-->
+<!--          <groupId>com.how_hard_can_it_be</groupId>-->
+<!--          <artifactId>Data</artifactId>-->
+<!--          <version>1.0-SNAPSHOT</version>-->
+<!--      </dependency>-->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
