--- a/LLWebJ/Data/pom.xml
+++ b/LLWebJ/Data/pom.xml
@@ -62,5 +62,11 @@
           <version>2.0.SP1</version>
           <scope>provided</scope>
       </dependency>
+      <dependency>
+          <groupId>org.jboss.weld.servlet</groupId>
+          <artifactId>weld-servlet-core</artifactId>
+          <version>3.1.4.Final</version>
+          <scope>runtime</scope>
+      </dependency>
   </dependencies>
 </project>
