--- a/LLWebJ/Data/pom.xml
+++ b/LLWebJ/Data/pom.xml
@@ -13,9 +13,11 @@
   <name>Data</name>
   <url>http://maven.apache.org</url>
   <properties>
-     <maven.compiler.source>11</maven.compiler.source>
-     <maven.compiler.target>11</maven.compiler.target>
-     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <!-- Wonder if I can/should define these properties at the parent POM level. -->
+      <maven.compiler.source>11</maven.compiler.source>
+      <maven.compiler.target>11</maven.compiler.target>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <org.mapstruct.version>1.3.1.Final</org.mapstruct.version> <!-- Defines a simple constant to be used elsewhere? -->
   </properties>
   <dependencies>
    <dependency>
@@ -67,5 +69,28 @@
           <artifactId>jmapper-core</artifactId>
           <version>1.6.1.CR2</version>
       </dependency>
+      <dependency>
+          <groupId>org.mapstruct</groupId>
+          <artifactId>mapstruct</artifactId>
+          <version>${org.mapstruct.version}</version>
+      </dependency>
   </dependencies>
+  <build>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.8.1</version>
+              <configuration>
+                  <annotationProcessorPaths>
+                      <path>
+                          <groupId>org.mapstruct</groupId>
+                          <artifactId>mapstruct-processor</artifactId>
+                          <version>${org.mapstruct.version}</version>
+                      </path>
+                  </annotationProcessorPaths>
+              </configuration>
+          </plugin>
+      </plugins>
+  </build>
 </project>
